@@ -21,6 +21,8 @@ Revision history for DBIx::Class
           when deploying a schema via sql file
         - Fix reverse_relationship_info on prototypical result sources
           (sources not yet registered with a schema)
+        - Automatically require the requested cursor class before use
+          (RT#64795)
 
     * Misc
         - Only load Class::C3 and friends if necessary ($] < 5.010)
